Version CVS HEAD (?)

  * src/gig.cpp, src/gig.h:
    - experimental support for Gigasampler v3 format;
      64 bit file offsets are truncated to 32 bit, 24 bit samples are
      truncated to 16 bit, up to 8 dimensions are read, additional
      articulation informations are ignored at the moment
      (patch by Andreas Persson)
    - added some file format compatibility checks
    - fixed vcf_type_lowpassturbo value (vcf_type_lowpassturbo was actually
      never used, because the necessary check was made before
      initialization)
    - fixed crossfade points order (structure for big endian and little
      endian systems was interchanged)
    - fixed some memory leaks (patch by 'Gene', a.k.a Anders Alm)
    - fixed crash which occured when patches did not have a sample assigned
      to their region or dimension region (patch by Andreas Persson)
    - support for compressed mono samples
    - experimental support for compressed 24 bit samples
    - fixed decompression on big-endian CPUs
    - fixed decompression bug that truncated the last block of samples

  * src/gigdump.cpp:
    - added output of UnityNote and FineTune

  * src/gigextract.cpp:
    - support for compressed mono samples and compressed 24 bit samples

Version 1.0.0 (26 Nov 2004)

  * packaging changes:
    - renamed 'libgig.pc.in' -> 'gig.pc.in' and renamed pkg-config lib name
      'libgig' -> 'gig' as it's common practice to omit the 'lib' prefix
    - fixed man pages automake install rule (which didn't work on Mandrake,
      SuSE and Fedora)
    - fixed generation of Doxygen API documentation (now also included in
      RPM and Debian packages)

  * src/gig.cpp, src/gig.h:
    - fixed / improved accuracy of all three velocity to volume
      transformation functions a.k.a. 'nonlinear','linear','special'
      (patch by Andreas Persson)
    - denormals are filtered from the velocity to volume tables
    - bugfix for dimension region switching (wrong handling of the release