@@ -33,10 +33,32 @@ AM_PROG_LIBTOOL
 AC_SUBST(SHLIB_VERSION_ARG)
 AC_SUBST(SHARED_VERSION_INFO)
 
+have_audio_file_lib="false"
+
 // check for presence of libsndfile
 PKG_CHECK_MODULES(SNDFILE, sndfile >= 1.0.2, ac_cv_sndfile=1, ac_cv_sndfile=0)
+AM_CONDITIONAL(HAVE_SNDFILE, test $ac_cv_sndfile = "1")
 AC_DEFINE_UNQUOTED([HAVE_SNDFILE],${ac_cv_sndfile}, [Set to 1 if you have libsndfile.])
 AC_SUBST(SNDFILE_CFLAGS)
 AC_SUBST(SNDFILE_LIBS)
+if test "$ac_cv_sndfile" = "1"; then
+    have_audio_file_lib="true";
+fi
+
+// check for presence of libaudiofile
+PKG_CHECK_MODULES(AUDIOFILE, audiofile >= 0.2.3, ac_cv_audiofile=1, ac_cv_audiofile=0)
+AC_DEFINE_UNQUOTED([HAVE_AUDIOFILE],${ac_cv_audiofile}, [Set to 1 if you have libaudiofile.])
+AC_SUBST(AUDIOFILE_CFLAGS)
+AC_SUBST(AUDIOFILE_LIBS)
+if test "$ac_cv_audiofile" = "1"; then
+    have_audio_file_lib="true";
+fi
+
+if test "$have_audio_file_lib" = "false"; then
+    echo "No audio file library found!"
+    echo "Sorry, you need either libsndfile or libaudiofile to compile libgig."
+    echo "This is needed for the gigextract utility to write audio files."
+    exit -1;
+fi
 
 AC_OUTPUT(Makefile doc/Makefile man/Makefile src/Makefile libgig.spec gig.pc Doxyfile)
